tests/neg/effects-class-1.scala
class Boo1 extends Pure // error
trait Boo2 extends Pure // error
object Boo3 extends Pure // error
